--- a/DataMining_11.2.ipynb
+++ b/DataMining_11.2.ipynb
@@ -1825,8 +1825,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3c39fa84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>Data1</th>\n",
+       "      <th>Data2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ha</td>\n",
+       "      <td>one</td>\n",
+       "      <td>0.947410</td>\n",
+       "      <td>1.004157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>hi</td>\n",
+       "      <td>two</td>\n",
+       "      <td>-0.728022</td>\n",
+       "      <td>0.316791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ho</td>\n",
+       "      <td>one</td>\n",
+       "      <td>-0.907070</td>\n",
+       "      <td>1.033642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ha</td>\n",
+       "      <td>one</td>\n",
+       "      <td>-0.372755</td>\n",
+       "      <td>-0.642233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ho</td>\n",
+       "      <td>two</td>\n",
+       "      <td>-1.259223</td>\n",
+       "      <td>-0.105887</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A    B     Data1     Data2\n",
+       "0  ha  one  0.947410  1.004157\n",
+       "1  hi  two -0.728022  0.316791\n",
+       "2  ho  one -0.907070  1.033642\n",
+       "3  ha  one -0.372755 -0.642233\n",
+       "4  ho  two -1.259223 -0.105887"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.DataFrame({'A':['ha','hi','ho','ha','ho'],\n",
+    "                  'B':['one','two','one','one','two'],\n",
+    "                  'Data1':np.random.randn(5),\n",
+    "                  'Data2':np.random.randn(5)})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "86e39889",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data1</th>\n",
+       "      <th>Data2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ha</th>\n",
+       "      <td>0.933497</td>\n",
+       "      <td>1.164173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hi</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ho</th>\n",
+       "      <td>0.249010</td>\n",
+       "      <td>0.805769</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Data1     Data2\n",
+       "A                     \n",
+       "ha  0.933497  1.164173\n",
+       "hi       NaN       NaN\n",
+       "ho  0.249010  0.805769"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('A').std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "697f5995",
    "metadata": {},
    "outputs": [],
    "source": []
