--- a/과제3/Assignment3.ipynb
+++ b/과제3/Assignment3.ipynb
@@ -79,14 +79,25 @@
     "file = \"C:/student_health_2.csv\"\n",
     "df = pd.read_csv(file, encoding='cp949')\n",
     "\n",
+    "#학년만 따로 추출하여 df1이라는 새로운 dataframe으로 만들어준다\n",
     "df1 = df['학년'].value_counts(sort=False)\n",
     "df1 = pd.DataFrame(df1)\n",
     "\n",
+    "#gruopby , agg 함수를 통해 학년별 키 몸무게 수축기 이완기를 평균 내어 준다\n",
+    "#grouped 의 type은 pandas.core.frame.DataFrame, 즉 새로운 DataFrame 생성\n",
     "grouped = df.groupby('학년')['키','몸무게','수축기','이완기'].agg(['mean'])\n",
     "\n",
+    "#concat 함수를 사용하여 df1, grouped 를 합쳐준 새로운 DataFrame을 만들어준다. new_df\n",
+    "#칼럼명을 알아보기 쉽게 변셩해준다\n",
     "new_df = pd.concat([df1,grouped], axis = 1)\n",
     "new_df.columns = ['학년 인원수','키 평균', '몸무게 평균', '수축기 평균', '이완기 평균']\n",
     "\n",
+    "\n",
+    "'''\n",
+    "pyplot 은 시퀀스 스칼라를 지원한다. \n",
+    "즉, \"순서가 있는 숫자\"로써 리스트(list) 또는 넘파이의 series 같은 데이터 유형을 의미한다\n",
+    "따라서 x,y 축에 플롯하고 싶은 데이터를 list 로 지정해야 한다.\n",
+    "'''\n",
     "'''학년 수'''\n",
     "xs = new_df.index.to_list()\n",
     "ys = new_df['학년 인원수'].to_list()\n",
