--- a/과제3/Assignment3_std.ipynb
+++ b/과제3/Assignment3_std.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "97cf43b4",
    "metadata": {},
    "outputs": [],
@@ -15,87 +15,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "8e53d55c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>학년</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>599</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>595</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>592</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    학년\n",
-       "1  591\n",
-       "2  599\n",
-       "3  601\n",
-       "4  591\n",
-       "5  595\n",
-       "6  592"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
     }
    ],
    "source": [
     "df1 = df['학년'].value_counts(sort=False)\n",
     "df1 = pd.DataFrame(df1)\n",
-    "df1"
+    "df1\n",
+    "\n",
+    "print(type(df1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "8875f244",
    "metadata": {},
    "outputs": [
@@ -117,7 +59,7 @@
        "Name: 몸무게, Length: 1398, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b8000ec2",
    "metadata": {},
    "outputs": [
@@ -155,7 +97,7 @@
        "Name: 키, Length: 1303, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "4643696f",
    "metadata": {},
    "outputs": [
@@ -188,7 +130,7 @@
        "Name: 수축기, Length: 104, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "87fed843",
    "metadata": {},
    "outputs": [
@@ -221,7 +163,7 @@
        "Name: 이완기, Length: 78, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,135 +174,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "85c99d9d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_5616\\2698009750.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-      "  grouped = df.groupby('학년')['키','몸무게','수축기','이완기'].agg(['mean'])\n"
+      "             키        몸무게         수축기        이완기\n",
+      "          mean       mean        mean       mean\n",
+      "학년                                              \n",
+      "1   121.106430  24.390186   94.505396  58.789568\n",
+      "2   127.584474  27.719866         NaN        NaN\n",
+      "3   133.401830  31.299667         NaN        NaN\n",
+      "4   139.384602  36.419628  100.110721  61.314587\n",
+      "5   144.822017  40.563193         NaN        NaN\n",
+      "6   151.969932  45.954899         NaN        NaN\n",
+      "type of grouped: <class 'pandas.core.frame.DataFrame'>\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>키</th>\n",
-       "      <th>몸무게</th>\n",
-       "      <th>수축기</th>\n",
-       "      <th>이완기</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>학년</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>121.106430</td>\n",
-       "      <td>24.390186</td>\n",
-       "      <td>94.505396</td>\n",
-       "      <td>58.789568</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>127.584474</td>\n",
-       "      <td>27.719866</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>133.401830</td>\n",
-       "      <td>31.299667</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>139.384602</td>\n",
-       "      <td>36.419628</td>\n",
-       "      <td>100.110721</td>\n",
-       "      <td>61.314587</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>144.822017</td>\n",
-       "      <td>40.563193</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>151.969932</td>\n",
-       "      <td>45.954899</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             키        몸무게         수축기        이완기\n",
-       "          mean       mean        mean       mean\n",
-       "학년                                              \n",
-       "1   121.106430  24.390186   94.505396  58.789568\n",
-       "2   127.584474  27.719866         NaN        NaN\n",
-       "3   133.401830  31.299667         NaN        NaN\n",
-       "4   139.384602  36.419628  100.110721  61.314587\n",
-       "5   144.822017  40.563193         NaN        NaN\n",
-       "6   151.969932  45.954899         NaN        NaN"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_16308\\2604466858.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  grouped = df.groupby('학년')['키','몸무게','수축기','이완기'].agg(['mean'])\n"
+     ]
     }
    ],
    "source": [
     "grouped = df.groupby('학년')['키','몸무게','수축기','이완기'].agg(['mean'])\n",
-    "grouped"
+    "print(grouped)\n",
+    "print(\"type of grouped:\",type(grouped))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "27baafdc",
    "metadata": {},
    "outputs": [
@@ -432,7 +283,7 @@
        "6         NaN"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
